@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkWinMenu.c,v 1.27 2003/12/26 20:46:03 mdejong Exp $
+ * RCS: @(#) $Id: tkWinMenu.c,v 1.28 2003/12/26 22:29:07 mdejong Exp $
  */
 
 #define OEMRESOURCE
@@ -1622,7 +1622,8 @@ DrawMenuEntryAccelerator(menuPtr, mePtr, d, gc, tkfont, fmPtr,
 	COLORREF oldFgColor = gc->foreground;
 
 	gc->foreground = GetSysColor(COLOR_3DHILIGHT);
-	if (mePtr->accelPtr != NULL) {
+	if ((mePtr->accelPtr != NULL) &&
+	        ((mePtr->entryFlags & ENTRY_PLATFORM_FLAG1) == 0)) {
 	    Tk_DrawChars(menuPtr->display, d, gc, tkfont, accel,
 		    mePtr->accelLength, leftEdge + 1, baseline + 1);
 	}
@@ -2158,6 +2159,17 @@ DrawMenuEntryLabel(
     	if (mePtr->labelLength > 0) {
 	    int baseline = y + (height + fmPtr->ascent - fmPtr->descent) / 2;
 	    char *label = Tcl_GetStringFromObj(mePtr->labelPtr, NULL);
+	    /* Win 95/98 systems draw disabled menu text with a
+	     * 3D highlight, unless the menu item is highlighted */
+	    if ((mePtr->state == ENTRY_DISABLED) &&
+	            ((mePtr->entryFlags & ENTRY_PLATFORM_FLAG1) == 0)){
+	        COLORREF oldFgColor = gc->foreground;
+		gc->foreground = GetSysColor(COLOR_3DHILIGHT);
+	        Tk_DrawChars(menuPtr->display, d, gc, tkfont, label, 
+		        mePtr->labelLength, leftEdge + textXOffset + 1, 
+		        baseline + textYOffset + 1);
+		gc->foreground = oldFgColor;
+	    }
 	    Tk_DrawChars(menuPtr->display, d, gc, tkfont, label, 
 		    mePtr->labelLength, leftEdge + textXOffset, 
 		    baseline + textYOffset);
